src/test/compile-fail/attr-bad-crate-attr.rc
// error-pattern: expected `mod`

#[attr = "val"];
#[attr = "val"] // Unterminated
